Ajuste Gradient Formulario

--- a/Formulario/css/style.css
+++ b/Formulario/css/style.css
@@ -8,12 +8,7 @@
 
 html {
   font-family: "Poppins", sans-serif;
-  background: linear-gradient(
-    to right,
-    rgb(178, 210, 240),
-    rgb(163, 178, 248),
-    rgb(103, 105, 236)
-  );
+  background: linear-gradient(90deg,rgba(48, 175, 255, 1) 0%, rgba(48, 179, 255, 1) 50%, rgba(48, 127, 255, 1) 100%);
   min-height: 100vh;
 }
 
