--- a/FitlyApp/Artigos/CSS/organização_alimentar.css
+++ b/FitlyApp/Artigos/CSS/organização_alimentar.css
@@ -220,7 +220,6 @@ section.porção p {
 }
 div.texto_e_video div.video p{
   text-align: center;
-  margin: 0 0 0 7rem;
 }
 /************************************************
 adaptação
@@ -348,4 +347,52 @@ footer div.direitos p {
 footer a {
     text-decoration: none;
     color: black;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 700px) {
+  .container {
+    flex-direction: column; 
+  }
+
+  section.introducao h2 {
+    font-size: 1.2rem;
+  }
+  section.introducao p {
+    font-size: 0.9rem;
+    text-align: justify;
+  }
+  section.planejamento h3 {
+    font-size: 1.1rem;
+    text-align: justify;
+  }
+  div.texto_e_video {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  div.texto_e_video div.video p {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    text-align: center;
+  }
+  div.texto_e_video div iframe {
+    width: 100%;
+    max-width: 350px;
+    aspect-ratio: 315 / 560;
+    height: auto; 
+  }
+
+  
 }
