--- a/FitlyApp/Artigos/CSS/alimentaçãoEquilibrada.css
+++ b/FitlyApp/Artigos/CSS/alimentaçãoEquilibrada.css
@@ -40,7 +40,7 @@ Coolors
 ************************************************/
 :root{
   --color-background:  #f7f7f7;
-  --color-text:black;
+  --color-text:#0a0908;
 }
 /************************************************
 Reset
@@ -58,55 +58,28 @@ HTML
 html {
   font-family: "Poppins";
   scroll-behavior: smooth;
-  background-color: var(--color-background);
   font-size: calc(15px + 0.390625vw);
   list-style-type: none;
 }
-p,strong, li, a {
+p,strong, a {
   color: var(--color-text);
 }
+li {
+  color: var(--color-background);
+
+}
 main {
-  margin: 0 10vw;
+  background-color: var(--color-background);
 }
 
 ul li {
   list-style: none;
 }
 
-
-
 /************************************************
 header
 ************************************************/
 
-header {
-  object-fit: cover;
-  position: sticky;
-  top: 0;
-  padding: 0.5rem 3rem 0.5rem 3rem;
-  background-color: rgba(255, 255, 255, 0.8);
-  backdrop-filter: blur(2px);
-  z-index: 10;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-header h2 {
-  font-size: 1.5rem;
-  color: #000000;
-  font-weight: bold;
-  float: left;
-}
-
-header .logo {
-  display: flex;
-  align-items: center;
-}
-
-header .logo img {
-  height: 2rem;
-}
 header nav {
   display: flex;
 }
@@ -133,40 +106,17 @@ header nav ul li {
   display: inline;
 }
 
-header nav ul li a {
-  font-size: 0.8rem;
-  color: #000000;
-  text-decoration: none;
-  font-weight: normal;
-}
-
-header nav ul li a.contato {
-  border-style: solid;
-  border-radius: 5px;
-  border-width: 0.1rem;
-  border-color: #009dff;
-  padding: 0.2rem;
-}
-
-header nav ul li a:hover {
-  background-color: #009dff;
-  color: #0d1b2a;
-  transition: all 0.3s ease;
-  border-radius: 5px;
-  padding: 0.2rem;
-}
-
 /************************************************
 Introdução
 ************************************************/
-main {
-  padding: 0.5rem 2rem 0.5rem 2rem;
+section.introduction {
+  margin: 0 10vw;
 }
 main section.introduction h2 {
   font-size: 3vw;
   text-align: center;
   color: #009dff;
-  margin: 0 0 2vw 0;
+  padding: 2vw 0;
   font-weight: bold;
 }
 main section.introduction p {
@@ -178,8 +128,11 @@ main section.introduction p {
 
 
 /************************************************
-                  Nutrientes
+Nutrientes
 ************************************************/
+section.nutrients {
+  margin: 2vw 10vw;
+}
 section.nutrients h3 {
   font-size: 1.5rem;
   text-align: center;
@@ -198,6 +151,7 @@ section.nutrients div ul {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 40px;
+  max-width: 80vw;
 }
 
 section div ul li:hover {
@@ -205,7 +159,7 @@ section div ul li:hover {
 }
 
 section.nutrients div ul li {
-  background-color: var(--color-background);
+  background-color: white;
   border-radius: 10px;
   list-style: none;
   padding: 20px;
@@ -213,7 +167,6 @@ section.nutrients div ul li {
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.15);
   justify-self: center;
 }
-
  
 section.nutrients div ul li p strong {
   font-size: 1.1rem;
@@ -269,6 +222,7 @@ footer div div ul li a {
 }
 footer div div p {
     font-size: 1vw;
+    color: black;
 }
 footer div a {
     display: flex;
@@ -317,8 +271,3 @@ footer a {
     text-decoration: none;
   color: var(--color-text);
   }
-
-
-
-
-
