--- a/FitlyApp/Artigos/CSS/alimentaçãoEquilibrada.css
+++ b/FitlyApp/Artigos/CSS/alimentaçãoEquilibrada.css
@@ -158,7 +158,7 @@ section.nutrients div ul li {
   padding: 20px;
   transition: all 0.3s ease;
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.15);
-  flex-basis: 38vw;
+  flex-basis: 36vw;
 }
 section.nutrients div ul li:last-of-type {
   margin: 0 0 30px 0;
@@ -168,31 +168,36 @@ section.nutrients div ul li:hover {
   transform: translateY(-5px);
 }
 
-
 section.nutrients div ul li p strong {
   font-size: 1.1rem;
   font-weight: bold;
 }
 
-section.nutrients p {
+section.nutrients ul li p {
   font-size: 1rem;
-  margin: 20px 10px;
+  margin: 10px auto;
+  min-height: 14vw;
 }
 
 section.nutrients ul li a {
   margin: 0 0 0 20px;
   color: #009dff;
 }
+section.nutrients ul li a:hover {
+  text-decoration: underline 2px;
+}
 section.nutrients ul li div {
   display: flex;
   align-items: flex-end;
   justify-content: center;
+  margin: 20px 0 0 0;
 }
 section.nutrients ul li div img {
   border: 2px solid #616161;
   border-radius: 10px;
   width: 90%;
-  height: 23vw;
+  min-height: 23vw;
+  
 }
 section.nutrients div.video {
   display: block;
@@ -213,27 +218,28 @@ footer div {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 2vw;
+}
+
+footer div a img {
+  width: 8vw;
 }
 footer div div {
   display: block;
 }
-
+footer div div.logo, div.contact, div.mapSite {
+  min-height: 24vw;
+  /*Alinha todas as Divs, e por consequências, os títulos*/
+}
 footer div div h2 {
   font-size: 1.5rem;
 }
 footer div div ul li a {
-  font-size: 1vw;
+  font-size: 0.8rem;
 }
 footer div div p {
-  font-size: 1vw;
+  font-size: 0.8rem;
   color: black;
-}
-footer div a {
-  display: flex;
-  align-items: center;
-}
-footer div a img {
-  width: 8vw;
 }
 footer div div.logo img {
   width: 5vw;
@@ -243,16 +249,17 @@ footer div div p {
 }
 footer div div.logo ul {
   display: flex;
-  gap: 0.5rem;
+  align-items: center;
+}
+footer div div.logo ul li {
+  display: flex;
+  align-items: center;
 }
 
-footer div div.logo ul span {
-  font-size: 1.1rem;
-}
 footer div div > h2 {
   color: #009dff;
 }
-footer div div ul li a {
+footer div div ul li > a {
   margin: 10px 0;
 }
 footer div div ul li a:hover {
@@ -264,29 +271,20 @@ footer div div p.email {
 footer div.direitos {
   display: flex;
   justify-content: center;
-  margin: 10px 0 15px 0;
 }
 footer div.direitos p {
   color: gray;
   font-size: 0.8rem;
 }
 
-footer a {
-  text-decoration: none;
-  color: black;
-}
   /*
   =====================================================
               Celular
   ======================================================
   */
-
-
 @media (max-width: 600px) {
   /*O Menu Hamburguer O Igor aplica depois*/
-  header nav {
-    display: none;
-  }
+
   header .logo img {
     height: 3vw;
   }
@@ -321,4 +319,9 @@ footer a {
   .nutrients ul li div img {
     height: 100%;  
   }
+  .nutrients div.video p iframe {
+    width: 80vw;
+    margin: 0;
+  }
+    /*Falta a formatação do footer*/
 }
