--- a/FitlyApp/Artigos/CSS/artigoPrincipal.css
+++ b/FitlyApp/Artigos/CSS/artigoPrincipal.css
@@ -267,8 +267,9 @@ footer a {
   }
 
   section div.tudo a img {
-    width: 100%;
-    height: 280px;
+    width: 15rem;
+    height: 10rem;
+    
   }
 
   section div.texto {
