--- a/FitlyApp/Referencias/css/Referencias.css
+++ b/FitlyApp/Referencias/css/Referencias.css
@@ -133,14 +133,14 @@ section {
   text-align: center;
 }
 
-section ul li{
+section ul li {
   width: 45%;
   height: auto;
   padding: 1vw 0vw 2vw 1vw;
-  margin: 2vw;
+  margin: 2vw 2vw 2vw 2vw;
   background-color: #FFFFFF;
   border-radius: 1vw;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.3);
   text-align: left;
 }
 
@@ -152,7 +152,6 @@ section h1 {
   display: inline-block;
   border-bottom: 3px solid #009dff;
 }
-
 
 section ul li h2 {
   font-size: 1.7vw;
@@ -196,6 +195,10 @@ section ul li{
 section ul li p{
   margin: 4px 4px;
   display: inline-block;
+}
+
+section ul li {
+  display: block;
 }
 
 /************************************************
@@ -267,4 +270,19 @@ footer div.direitos p {
 footer a {
     text-decoration: none;
     color: black;
+}
+
+/*Responsividade*/
+@media (max-width: 768px) {
+  section.main ul li {
+    font-size: 2vw;
+  }
+  main {
+    font-size: 16px;
+    margin: 10px;
+  }
+
+  .main {
+    flex-direction: column;
+  }
 }
