--- a/footer.css
+++ b/footer.css
@@ -2,6 +2,7 @@
 Poppins Font
 ************************************************/
 
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 a {
@@ -23,14 +24,26 @@ Reset
 HTML
 ************************************************/
 
+:root {
+  --step-2: clamp(0.7813rem, 0.7736rem + 0.0341vw, 0.8rem);
+  --step-1: clamp(0.9375rem, 0.9119rem + 0.1136vw, 1rem);
+  --step-0: clamp(1.125rem, 1.0739rem + 0.2273vw, 1.25rem);
+  --step-1-larger: clamp(1.35rem, 1.2631rem + 0.3864vw, 1.5625rem);
+  --step-2-larger: clamp(1.62rem, 1.4837rem + 0.6057vw, 1.9531rem);
+  --step-3: clamp(1.944rem, 1.7405rem + 0.9044vw, 2.4414rem);
+  --step-4: clamp(2.3328rem, 2.0387rem + 1.3072vw, 3.0518rem);
+  --step-5: clamp(2.7994rem, 2.384rem + 1.8461vw, 3.8147rem);
+}
+
 html {
   font-family: "Poppins";
   scroll-behavior: smooth;
   background-color: #ffffff;
 }
 
+/* USO DIRETO */
 html {
-  font-size: calc(15px + 0.390625vw);
+  font-size: clamp(1rem, calc(0.5rem + 2vw), 1.625rem);
 }
 
 ul li {
@@ -41,63 +54,104 @@ ul li {
 footer
 ************************************************/
 
-footer div {
+footer {
+  padding: 2rem 0;
+  border-top: 1px solid #eee;
+}
+
+footer > div:first-child {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin: 1vw 3vw 0 3vw;
+  align-items: flex-start;
+  gap: 2rem;
+  margin: 0 auto;
+  padding: 0 3rem;
+  max-width: 1200px;
 }
+
 footer div div {
   display: block;
+  flex: 1;
+}
+
+footer div div.logo {
+  flex-basis: 40%;
 }
 
 footer div div h2 {
-  font-size: 1.5vw;
+  font-size: var(--step-0);
+  font-weight: 600;
+  margin-bottom: 1rem;
 }
+
 footer div div ul li a {
-  font-size: 1vw;
+  font-size: var(--step--1);
 }
+
 footer div div p {
-  font-size: 1vw;
+  font-size: var(--step--1);
+  line-height: 1.6;
 }
+
 footer div a {
   display: flex;
   align-items: center;
 }
+
 footer div a img {
-  width: 8vw;
+  width: auto;
+  height: 2.5rem;
 }
+
 footer div div.logo img {
-  width: 5vw;
+  width: auto;
+  height: 2.5rem;
 }
+
 footer div div p {
   margin: 10px 0;
 }
+
 footer div div.logo ul {
   display: flex;
-  gap: 0.5rem;
+  gap: 1rem;
+  padding-left: 0;
 }
 
 footer div div.logo ul span {
-  font-size: 1.1rem;
+  font-size: 1.5rem;
+  transition: color 0.3s ease;
 }
+
+footer div div.logo ul a:hover span {
+  color: #009dff;
+}
+
 footer div div > h2 {
   color: #009dff;
 }
+
 footer div div ul li {
-  margin: 10px 0;
+  margin: 0.5rem 0;
 }
+
 footer div div ul li a:hover {
-  text-decoration: underline #009dff 0.1vw;
+  text-decoration: underline #009dff 2px;
 }
+
 footer div div p.email {
   color: #009dff;
+  font-weight: 500;
 }
+
 footer div.direitos {
   display: flex;
   justify-content: center;
-  margin: 10px 0 15px 0;
+  margin: 2rem 3rem 0 3rem;
+  padding-top: 1rem;
+  border-top: 1px solid #eee;
 }
+
 footer div.direitos p {
   color: gray;
   font-size: 0.8rem;
@@ -108,8 +162,44 @@ footer a {
   color: black;
 }
 
-@media screen and (max-width: 1000px) {
-    footer {
-        display: block;
-    }
+@media screen and (max-width: 600px) {
+  footer > div:first-child {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 0 1.5rem;
+    gap: 2.5rem;
+    margin: 0;
+  }
+
+  footer div div.logo {
+    flex-basis: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  footer div div.logo ul {
+    justify-content: center;
+  }
+
+  footer div div h2 {
+    font-size: 1.25rem;
+  }
+
+  footer div div ul li a {
+    font-size: 1rem;
+  }
+
+  footer div div p {
+    font-size: 1rem;
+  }
+
+  footer div.direitos {
+    margin: 2rem 1.5rem 0 1.5rem;
+  }
+
+  footer div.direitos p {
+    text-align: center;
+  }
 }
